# chessdb

./: .gitignore  .gitmodules  CMakeLists.txt  Notes.md  README.md  converter.cpp  main.session.sql  premake5.lua
chessfiles/: CMakeLists.txt  binaryFile.cpp  binaryFile.h  pgnFile.cpp  pgnFile.h
chessgame/: CMakeLists.txt  board.cpp  board.h  clockTime.cpp  datetime.cpp  datetime.h  evaluation.h  game.h  move.cpp  pieces.cpp  pieces.h  position.cpp  result.h  square.h  timeControl.h  tmp_board.h
database/: CMakeLists.txt  database.h  db.cpp  games.cpp  games.h
engine/: uci.h
fileFormat/: CMakeLists.txt  binaryFile.cpp  pgnFile.h
internal/: annotation.cpp  annotation.h  evaluation.cpp
internal/game/: game.h  move.cpp  move.h  piece.cpp  position.cpp  position.h  square.h  state.cpp  state.h
scripts/: CMakeLists.txt  converter.cpp  db.cpp
src/annotation/: annotation.h  evaluation.h  time.h
src/core/: attacks.cpp  attacks.h  board.cpp  board.h  castling.cpp  castling.h  color.h  legalMoves.cpp  legalMoves.h  move.h  offset.h  piece.h  square.h  state.cpp  state.h
src/database/: blobs.cpp  blobs.h  database.h  games.cpp  games.h  insert.cpp  insert.h
src/engine/: uci.cpp  uci.h
src/fileFormat/: binaryFile.cpp  binaryFile.h  pgnFile.cpp  pgnFile.h
src/formats/: algebraic.h  binaryFile.cpp  binaryFile.h  fen.cpp  fen.h  pgn.h  pgnFile.cpp  pgnFile.h
src/internal/: evaluation.cpp  evaluation.h
src/internal/annotation/: annotation.cpp  annotation.h  evaluation.cpp  evaluation.h
src/internal/game/: game.h  move.cpp  move.h  piece.cpp  piece.h  position.cpp  position.h  result.cpp  result.h  square.h  state.cpp  state.h
src/internal/logic/: attackedSquares.cpp  attackedSquares.h  attacks.cpp  attacks.h  board.cpp  board.h  castleRights.h  castling.cpp  castling.h  color.h  legalMoves.cpp  legalMoves.h  move.h  offset.h  piece.h  position.cpp  position.h  square.h  state.cpp  state.h
src/internal/time/: clockTime.h  datetime.h
test/: CMakeLists.txt  testPiece.cpp
test/core/: testAttacks.cpp  testBoard.cpp  testCastling.cpp  testOffset.cpp  testPiece.cpp  testSquare.cpp
test/engine/: testUCI.cpp
test/internal/: testAttacks.cpp  testCastling.cpp  testOffset.cpp  testPiece.cpp  testPosition.cpp  testSquare.cpp
tmp/: five_games.pgn
